// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSuperSelectControl is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="ouiFormControlLayout"
  >
    <div
      class="ouiFormControlLayout__childrenWrapper"
    >
      <span
        class="ouiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-label="aria-label"
        aria-labelledby="undefined generated-id"
        class="ouiSuperSelectControl testClass1 testClass2"
        data-test-subj="test subject string"
        type="button"
      />
      <div
        class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
      >
        <span
          class="ouiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="ouiFormControlLayoutCustomIcon__icon"
            data-ouiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`OuiSuperSelectControl props compressed is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="ouiFormControlLayout ouiFormControlLayout--compressed"
  >
    <div
      class="ouiFormControlLayout__childrenWrapper"
    >
      <span
        class="ouiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="ouiSuperSelectControl ouiSuperSelectControl--compressed"
        type="button"
      />
      <div
        class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
      >
        <span
          class="ouiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="ouiFormControlLayoutCustomIcon__icon"
            data-ouiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`OuiSuperSelectControl props disabled options are rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="ouiFormControlLayout"
  >
    <div
      class="ouiFormControlLayout__childrenWrapper"
    >
      <span
        class="ouiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="ouiSuperSelectControl"
        type="button"
      />
      <div
        class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
      >
        <span
          class="ouiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="ouiFormControlLayoutCustomIcon__icon"
            data-ouiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`OuiSuperSelectControl props empty value option is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="ouiFormControlLayout"
  >
    <div
      class="ouiFormControlLayout__childrenWrapper"
    >
      <span
        class="ouiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="ouiSuperSelectControl"
        type="button"
      />
      <div
        class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
      >
        <span
          class="ouiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="ouiFormControlLayoutCustomIcon__icon"
            data-ouiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`OuiSuperSelectControl props fullWidth is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
  >
    <div
      class="ouiFormControlLayout__childrenWrapper"
    >
      <span
        class="ouiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="ouiSuperSelectControl ouiSuperSelectControl--fullWidth"
        type="button"
      />
      <div
        class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
      >
        <span
          class="ouiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="ouiFormControlLayoutCustomIcon__icon"
            data-ouiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`OuiSuperSelectControl props isInvalid is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="ouiFormControlLayout"
  >
    <div
      class="ouiFormControlLayout__childrenWrapper"
    >
      <span
        class="ouiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="ouiSuperSelectControl ouiSuperSelectControl-isInvalid"
        type="button"
      />
      <div
        class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
      >
        <span
          class="ouiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="ouiFormControlLayoutCustomIcon__icon"
            data-ouiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`OuiSuperSelectControl props isLoading is rendered 1`] = `
Array [
  <input
    type="hidden"
    value=""
  />,
  <div
    class="ouiFormControlLayout"
  >
    <div
      class="ouiFormControlLayout__childrenWrapper"
    >
      <span
        class="ouiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: , is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="ouiSuperSelectControl ouiSuperSelectControl-isLoading"
        type="button"
      />
      <div
        class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
      >
        <span
          class="ouiLoadingSpinner ouiLoadingSpinner--medium"
        />
        <span
          class="ouiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="ouiFormControlLayoutCustomIcon__icon"
            data-ouiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`OuiSuperSelectControl props value option is rendered 1`] = `
Array [
  <input
    type="hidden"
    value="1"
  />,
  <div
    class="ouiFormControlLayout"
  >
    <div
      class="ouiFormControlLayout__childrenWrapper"
    >
      <span
        class="ouiScreenReaderOnly"
        id="generated-id"
      >
        Select an option: Option #1, is selected
      </span>
      <button
        aria-haspopup="true"
        aria-labelledby="undefined generated-id"
        class="ouiSuperSelectControl"
        type="button"
      >
        Option #1
      </button>
      <div
        class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
      >
        <span
          class="ouiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="ouiFormControlLayoutCustomIcon__icon"
            data-ouiicon-type="arrowDown"
          />
        </span>
      </div>
    </div>
  </div>,
]
`;
